examples/test/testpolicy14344.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14344
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key44: value25
      key0: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value30
          key3: value6
          key32: value5
      podSelector:
        matchLabels:
          key30: value15
          key19: value40
          key2: value20
